fixed style of flash player on IE
git-svn-id: https://eriforce.eicp.net:8443/svn/efVideoTube@39 327c06df-790c-a84e-b573-9b11f8e4cc45

--- a/efVideoTube/Content/Player.css
+++ b/efVideoTube/Content/Player.css
@@ -45,3 +45,7 @@ div.playerContainer audio {
 #silverlightControlHost {
     height: 100%;
 }
+object {
+    position: absolute;
+    outline: none;
+}
